<resources>
    <string name="app_name">ProjectCMU</string>
    <string name="title_activity_main_menu_screen">MainMenuScreen</string>
    <string name="add_post">Add Post</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="cancel_post">Cancel</string>
    <string name="ok_post">OK</string>
    <string name="title">Title</string>

<<<<<<< HEAD
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_location_screen">LocationScreen</string>
    <string name="add_post">Add Post</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="cancel_post">Cancel</string>
    <string name="ok_post">OK</string>
    <string name="title">Title</string>
    <string name="title_activity_post_menu_screen">PostMenuScreen</string>
=======
>>>>>>> origin/master
</resources>
