<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    tools:context="pt.ulisboa.tecnico.cmov.projectcmu.addPostScreen">
=======
    tools:context="pt.ulisboa.tecnico.cmov.projectcmu.AddPostScreen">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="0dp"
        android:onClick="goHome"
        android:text="@string/home"/>
>>>>>>> origin/master

    <TextView
        android:id="@+id/Lheader"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
<<<<<<< HEAD
        app:layout_constraintHorizontal_bias="0.09"
=======
        app:layout_constraintHorizontal_bias="0.097"
>>>>>>> origin/master
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/post"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="62dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button3"
        android:layout_marginLeft="62dp"
        android:layout_marginRight="62dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="8dp"
        android:onClick="cancelPost"
        android:text="@string/cancel_post"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="84dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="84dp"
<<<<<<< HEAD
        android:onClick="finishNewPost"
        android:text="@string/ok_post"/>

    <EditText
        android:id="@+id/new_post_title"
=======
        android:onClick="okPost"
        android:text="@string/ok_post"/>

    <EditText
        android:id="@+id/editText"
>>>>>>> origin/master
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
<<<<<<< HEAD
        app:layout_constraintBottom_toTopOf="@+id/new_post_body"
=======
        app:layout_constraintBottom_toTopOf="@+id/editText2"
>>>>>>> origin/master
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        app:layout_constraintHorizontal_bias="1.0"
<<<<<<< HEAD
        android:hint="Title" />

    <EditText
        android:id="@+id/new_post_body"
=======
        android:text="@string/title"/>

    <EditText
        android:id="@+id/editText2"
>>>>>>> origin/master
        android:layout_width="0dp"
        android:layout_height="314dp"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        app:layout_constraintHorizontal_bias="0.0"
<<<<<<< HEAD
        app:layout_constraintVertical_bias="0.61" />
=======
        app:layout_constraintVertical_bias="0.614" />
>>>>>>> origin/master

</android.support.constraint.ConstraintLayout>
